tests/ui/higher-rank-trait-bounds/normalize-under-binder/issue-62529-3.stderr
error[E0277]: expected a `Fn<(<_ as ATC<'a>>::Type,)>` closure, found `F`
  --> $DIR/issue-62529-3.rs:25:14
   |
LL |         call(f, ());
   |         ---- ^ expected an `Fn<(<_ as ATC<'a>>::Type,)>` closure, found `F`
   |         |
   |         required by a bound introduced by this call
   |
   = note: expected a closure with arguments `((),)`
              found a closure with arguments `(<_ as ATC<'a>>::Type,)`
note: required by a bound in `call`
  --> $DIR/issue-62529-3.rs:9:36
   |
LL | fn call<'b, T: for<'a> ATC<'a>, F: for<'a> Fn(<T as ATC<'a>>::Type)>(
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `call`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
